--- a/styles/style.css
+++ b/styles/style.css
@@ -100,6 +100,32 @@ nav{
     display: none;
 }
 
+/* Banner Styles */
+.banner{
+    max-width: 1330px;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 60px;
+    justify-content: space-around;
+    align-items: center;
+    gap: 50px;
+}
+.banner-content{
+    max-width: 640px;
+}
+.banner-title{
+    font-size: 3.5rem;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+.banner-desc{
+    font-size: 1.25rem;
+    margin-bottom: 24px;
+}
+.banner-btn{
+    padding: 10px 47px;
+}
+
 /* Responsive for Mobile Devices */
 @media screen and (max-width: 576px) {
     .nav-links, .nav-title, .nav-btn{
@@ -107,9 +133,13 @@ nav{
     }
     nav{
         padding: 12px 16px;
-        border: 1px solid rgba(254, 163, 1, 1);
+        border-bottom: 1px solid rgba(254, 163, 1, 1);
     }
     .menu-btn{
         display: block;
+    }
+    .banner{
+        flex-direction: column-reverse;
+        text-align: center;
     }
 }
